# DIT.DaT

./: HOWTO.txt  LICENSE  README.md  fase0.py  fase1.py  fase2.py  fase3.py  fase4.py  fase5.py  fase6.py  pyproject.toml  refactoring.md  requirements.txt  template.html
ditdat/: __init__.py  cli.py  phase0.py  phase1.py  phase2-report.py  phase2.py  phase2_report.py  phase3.py  phase4.py  phase5.py  phase6.py  utils.py
legacy/: fase0-1.py  fase1-1.py  fase2-1.py  fase2-report-1.py  fase2-report.py  fase3-1.py  fase4-1.py  fase5-1.py  fase5.py  fase6-1.py  optimize.py  pipeline.py
