[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ditdat"
version = "0.1.0"
description = "DIT Diarization and Transcription tool — modular pipeline for long-form audio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "pyannote.audio>=4.0.0",
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.scripts]
ditdat = "ditdat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ditdat*"]
